--- a/KaassaMobile/res/layout/main.xml
+++ b/KaassaMobile/res/layout/main.xml
@@ -4,17 +4,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-
-      <TextView
-        android:id="@+id/tvIsConnected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"    
-        android:background="#FF0000"
-        android:textColor="#FFF"
-        android:textSize="18dp"
-        android:layout_marginBottom="5dp"
-        android:text="is connected? " />
       
     <EditText
         android:id="@+id/editText1"
@@ -30,6 +19,13 @@
         android:layout_width="137dp"
         android:layout_height="wrap_content"
         android:text="Search" />
+    
+	<TextView  
+	    android:layout_width="match_parent" 
+	    android:layout_height="wrap_content" 
+	   	android:id="@+id/jsonDisplay"
+	   	android:text="sample test" 
+	    />
 
 </LinearLayout>
 
