--- a/KaassaMobile/res/layout/hotellist2.xml
+++ b/KaassaMobile/res/layout/hotellist2.xml
@@ -4,23 +4,54 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
   
-    <TextView android:id="@+id/hotel_name"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	/>
-    
-    <TextView android:id="@+id/hotel_city"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	 />
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal" >
+	              		
+	        <TextView android:id="@+id/hotel_name"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			/>
 
-     <TextView android:id="@+id/hotel_country"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	 />
-     
-     <TextView android:id="@+id/hotel_stars"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	 />
+        	<TextView android:id="@+id/separateur_stars_name"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text=" - "
+			 />
+
+        	<TextView android:id="@+id/hotel_stars"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			 />
+		    
+        	<TextView android:id="@+id/suffixe_stars"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text=" Stars "
+			 />
+    </LinearLayout>
+    
+    <LinearLayout 
+        android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal" >  
+	    
+        	<TextView android:id="@+id/hotel_city"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			 /> 
+			 
+        	<TextView android:id="@+id/separateur_city_country"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text=" - "
+			 />
+		     <TextView android:id="@+id/hotel_country"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			 />
+		     
+    </LinearLayout>
+
 </LinearLayout>
