--- a/KaassaMobile/res/layout/main.xml
+++ b/KaassaMobile/res/layout/main.xml
@@ -1,7 +1,8 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-android:id="@+id/hotels_list">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hotels_list"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#FFFFFF" >
 
 </ListView>
