--- a/KaassaMobile/res/layout/main.xml
+++ b/KaassaMobile/res/layout/main.xml
@@ -8,6 +8,8 @@
         android:id="@+id/hotels_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@android:color/black"
+        android:dividerHeight="1sp"
         android:background="#FFFFFF"
          >
   </ListView>
