--- a/KaassaMobile/res/layout/hoteldetaillist.xml
+++ b/KaassaMobile/res/layout/hoteldetaillist.xml
@@ -4,11 +4,10 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/hoteletaillist"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
-android:background="#FFFFFF"
+android:background="@android:color/white"
 >
             		    
 	<LinearLayout 
-    android:background="#FFFFFF" 
     android:layout_width="match_parent" 
     android:layout_height="match_parent"   
     android:orientation="vertical"
@@ -105,7 +104,6 @@ android:background="#FFFFFF"
 		 android:layout_width="16dp"
 		 android:layout_height="16dp"
          android:src="@drawable/phone_icon"
-         android:layout_weight="1"
          />
 	
 	     <TextView android:id="@+id/hotel_detail_phone"
@@ -115,10 +113,12 @@ android:background="#FFFFFF"
 		android:textStyle="bold"
 		android:textSize="15sp"
 		android:textColor="@android:color/black"
-		android:layout_weight="2"
+		android:autoLink="phone"
+		android:paddingLeft="10dp"
 		 />
 	</LinearLayout>
-		<LinearLayout
+	
+	<LinearLayout
 		android:id="@+id/line3"
 	    android:background="#FFFFFF" 
 	    android:layout_width="match_parent"
@@ -128,11 +128,36 @@ android:background="#FFFFFF"
 	    >     
 
 		    <ImageView
+	         android:id="@+id/mail_icon"
+			 android:layout_width="16dp"
+			 android:layout_height="16dp"
+	         android:src="@drawable/mail_icon"
+	         />
+		     <TextView android:id="@+id/hotel_detail_email"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:fontFamily="Helvetica Neue, Helvetica, Arial, sans-serif"
+			android:textStyle="bold"
+			android:textSize="15sp"
+			android:textColor="@android:color/black"
+			android:autoLink="email"
+			android:paddingLeft="10dp"
+			 />
+		</LinearLayout>
+		<LinearLayout
+		android:id="@+id/line4"
+	    android:background="#FFFFFF" 
+	    android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/line3"
+		android:padding="10dp"
+	    >     
+
+		    <ImageView
 	         android:id="@+id/web_icon"
 			 android:layout_width="16dp"
 			 android:layout_height="16dp"
 	         android:src="@drawable/web_icon"
-	         android:layout_weight="1"
 	         />
 		     <TextView android:id="@+id/hotel_detail_website"
 			android:layout_width="wrap_content"
@@ -140,21 +165,33 @@ android:background="#FFFFFF"
 			android:fontFamily="Helvetica Neue, Helvetica, Arial, sans-serif"
 			android:textStyle="bold"
 			android:textSize="15sp"
-			android:textColor="@android:color/black"
-			android:layout_weight="2"
+			android:textColor="@android:color/black"	
+			android:autoLink="web"
+			android:paddingLeft="10dp"
 			 />
 		</LinearLayout> 
-		    
-		    <TextView android:id="@+id/hotel_detail_services"
+		
+		<TextView android:id="@+id/services_list_title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:fontFamily="Helvetica Neue, Helvetica, Arial, sans-serif"
 			android:textStyle="bold"
 			android:textSize="15sp"
 			android:textColor="@android:color/black"
-			android:layout_weight="2"
+			android:text="Services Disponibles:"
 			android:layout_below="@+id/line3"
 			 />
+		<ListView
+		    android:id="@+id/services_list"
+		    android:padding="10dp"	    
+		    android:layout_width="fill_parent"		    
+		    android:layout_height="wrap_content" >
+		 
+		</ListView>
+		    
 	    
 	</LinearLayout>
+
+
+	    
 </RelativeLayout>
