--- a/KaassaMobile/res/menu/main.xml
+++ b/KaassaMobile/res/menu/main.xml
@@ -8,5 +8,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item
+    android:id="@+id/action_leaveusmessage"
+    android:orderInCategory="100"
+    android:title="@string/action_leaveusmessage"
+    app:showAsAction="never"/>
 
 </menu>
