23/01/2015: Add filter dialog on Hotellist. 	- Manager the filtering on "number of stars" basis.

--- a/KaassaMobile/res/layout/activity_main.xml
+++ b/KaassaMobile/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
 	    <RadioButton android:id="@+id/radio_enterprise"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="Enterprises"
+	        android:text="Companies"
 	        android:textSize="13sp"
 	        android:textColor="@android:color/black"
 	        android:onClick="onRadioButtonClicked"/>
