20150201: -	Improvements on "filtering" functionnality. (Add filter on Country, City and Services) -	Improvements on application style (Add a logo and an icon for filtering hotel)

--- a/KaassaMobile/res/layout/main.xml
+++ b/KaassaMobile/res/layout/main.xml
@@ -11,6 +11,8 @@
         android:id="@+id/search"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" 
+        android:layout_marginTop="5sp"
+        android:layout_marginBottom="20sp"
         android:textColor="@android:color/black"
         >
  
