--- a/KaassaMobile/res/menu/main.xml
+++ b/KaassaMobile/res/menu/main.xml
@@ -7,11 +7,11 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:showAsAction="never"/>
     <item
     android:id="@+id/action_leaveusmessage"
     android:orderInCategory="100"
     android:title="@string/action_leaveusmessage"
-    app:showAsAction="never"/>
+    android:showAsAction="never"/>
 
 </menu>
